secure-serialize/tests/ui/unnamed_fields.stderr
error: SecureSerialize only supports structs with named fields
 --> tests/ui/unnamed_fields.rs:4:1
  |
4 | #[derive(Deserialize, SecureSerialize)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SecureSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)
